# cmd/api/posts.go
@@ -29,13 +29,13 @@ type updatePostPayload struct {
 //	@Summary		Create a post
 //	@Description	Create a new post
 //	@Tags			posts
-//	@Accept			JSON
-//	@Produce		JSON
-//	@Param			payload	body	createPostPayload	true	"Post payload"
-//	@Success		201	{object}	store.Post
-//	@Failure		400	{object}	error
-//	@Failure		500	{object}	error
-//	@Router	/posts [post]
+//	@Accept			json
+//	@Produce		json
+//	@Param			payload	body		createPostPayload	true	"Post payload"
+//	@Success		201		{object}	store.Post
+//	@Failure		400		{object}	error
+//	@Failure		500		{object}	error
+//	@Router			/posts [post]
 func (app *application) createPostHandler(w http.ResponseWriter, r *http.Request) {
 	var payload createPostPayload
 	if err := readJSON(w, r, &payload); err != nil {
@@ -74,9 +74,9 @@ func (app *application) createPostHandler(w http.ResponseWriter, r *http.Request
 //	@Accept			json
 //	@Produce		json
 //	@Param			postID	path		int	true	"Post ID"
-//	@Success		201	{object}	store.Post
-//	@Failure		404	{object}	error
-//	@Failure		500	{object}	error
+//	@Success		201		{object}	store.Post
+//	@Failure		404		{object}	error
+//	@Failure		500		{object}	error
 //	@Router			/posts/{postID} [get]
 func (app *application) getPostHandler(w http.ResponseWriter, r *http.Request) {
 	post := getPostFromContext(r)
@@ -103,9 +103,9 @@ func (app *application) getPostHandler(w http.ResponseWriter, r *http.Request) {
 //	@Accept			json
 //	@Produce		json
 //	@Param			postID	path		int	true	"Post ID"
-//	@Success		204	{object}	nil
-//	@Failure		404	{object}	error
-//	@Failure		500	{object}	error
+//	@Success		204		{object}	nil
+//	@Failure		404		{object}	error
+//	@Failure		500		{object}	error
 //	@Router			/posts/{postID} [delete]
 func (app *application) deletePostHandler(w http.ResponseWriter, r *http.Request) {
 	idParam := chi.URLParam(r, "postID")
@@ -136,12 +136,12 @@ func (app *application) deletePostHandler(w http.ResponseWriter, r *http.Request
 //	@Tags			posts
 //	@Accept			json
 //	@Produce		json
-//	@Param			postID	path		int	true	"Post ID"
+//	@Param			postID	path		int					true	"Post ID"
 //	@Param			payload	body		updatePostPayload	true	"Update post payload"
-//	@Success		200	{object}	store.Post
-//	@Failure		400	{object}	error
-//	@Failure		404	{object}	error
-//	@Failure		500	{object}	error
+//	@Success		200		{object}	store.Post
+//	@Failure		400		{object}	error
+//	@Failure		404		{object}	error
+//	@Failure		500		{object}	error
 //	@Router			/posts/{postID} [patch]
 func (app *application) updatePostHandler(w http.ResponseWriter, r *http.Request) {
 	post := getPostFromContext(r)
